# ai_co_scientist

./: .env.example  .gitignore  .gitmodules  DOCKER_COMPOSE.md  DOCKER_SETUP_SUMMARY.md  ORCHESTRATOR_PLAN.md  README.md  docker-compose.yml  pyproject.toml
examples/notebooks/: france_query_ollama.md
octotools/engine/: factory.py  litellm.py  ollama.py
octotools/models/: executor.py  initializer.py  planner.py
octotools/tools/google_search/doc/: readme.md
services/: README.md
services/common/: Makefile  README.md  pyproject.toml  requirements.txt  requirements_test.txt
services/common/src/shared_library/: data_contracts.py  memory_interface.py  provenance.py  timeutils.py
services/common/tests/: test_data_contracts.py
services/llm/: .env.example  Makefile  README.md  docker-compose.yaml
services/llm/scripts/: smoke_llm.py
services/llm/src/gateway/: Dockerfile  api.py  requirements.txt
services/memory/: ARCHITECTURE.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
services/memory/src/: app.py  config.py  graph_client.py  graphiti_client.py  graphiti_paper_backend.py
services/memory/src/routers/: episodes.py  queries.py
services/ocr/: Dockerfile  Makefile  README.md  requirements.txt  requirements_server.txt  requirements_test.txt
services/ocr/src/: ocr_runtime.py  server.py  utils.py
services/ocr/tests/: test_ocr_runtime.py  test_server.py
services/octo_agent/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
services/octo_agent/src/: agent_loop.py  app_wiring.py  solver.py
services/octo_agent/src/engine/: base.py  factory.py  local_llm.py  utils.py
services/octo_agent/src/engines/: __init__.py
services/octo_agent/src/models/: __init__.py  executor.py  formatters.py  initializer.py  memory.py  planner.py
services/octo_agent/src/tools/: README.md  base.py  registry.py
services/octo_agent/src/tools/document_parser/: README.md  tool.py
services/octo_agent/src/tools/document_parser_ocr/: README.md  tool.py
services/octo_agent/tests/: test_tools_registry.py
services/orchestrator/: Dockerfile  Makefile  README.md  requirements.txt  requirements_test.txt
services/orchestrator/src/: agent_loop.py  app_wiring.py  imports.py  runtime_config.py  tools_registry.py
services/orchestrator/src/engines/: factory.py  local_llm.py
services/orchestrator/src/tools/: ocr.py
tasks/gpqa/: quick_demo.sh  run_gpt4o.sh  run_octotools.sh  run_octotools_base.sh
tasks/pathcls/: README.md  generate_data.ipynb
